# src/api/handlers/countries.go
@@ -1,0 +1,131 @@
+package handlers
+
+import (
+	"net/http"
+	"strconv"
+
+	"github.com/Moji00f/SimpleProject/api/dto"
+	"github.com/Moji00f/SimpleProject/api/helper"
+	"github.com/Moji00f/SimpleProject/config"
+	"github.com/Moji00f/SimpleProject/services"
+	"github.com/gin-gonic/gin"
+)
+
+type CountryHandler struct {
+	service *services.CountryService
+}
+
+func NewCountryHandler(cfg *config.Config) *CountryHandler {
+	return &CountryHandler{service: services.NewCountryService(cfg)}
+}
+
+// CreateCountry godoc
+// @Summary Create a country
+// @Description Create a country
+// @Tags Countries
+// @Accept  json
+// @Produce  json
+// @Param Request body dto.CreateUpdateCountryRequest true "Create a country"
+// @Success 201 {object} helper.BaseHttpResponse{result=dto.CountryResponse} "Country response" "Success"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad request"
+// @Router /v1/countries/ [post]
+// @Security AuthBearer
+func (h *CountryHandler) Create(c *gin.Context) {
+	req := dto.CreateUpdateCountryRequest{}
+	err := c.ShouldBindJSON(&req)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest, helper.GenerateBaseResponseWithValidatioinError(nil, false, 121, err))
+		return
+	}
+
+	res, err := h.service.Create(c, &req)
+	if err != nil {
+		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err), helper.GenerateBaseResponseWithError(nil, false, 121, err))
+		return
+	}
+	c.JSON(http.StatusCreated, helper.GenerateBaseResponse(res, true, 0))
+}
+
+// UpdateCountry godoc
+// @Summary Update a country
+// @Description Update a country
+// @Tags Countries
+// @Accept  json
+// @Produce  json
+// @Param id path int true "Id"
+// @Param Request body dto.CreateUpdateCountryRequest true "Update a country"
+// @Success 201 {object} helper.BaseHttpResponse{result=dto.CountryResponse} "Country response" "Success"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad request"
+// @Router /v1/countries/{id} [put]
+// @Security AuthBearer
+func (h *CountryHandler) Update(c *gin.Context) {
+	id, _ := strconv.Atoi(c.Params.ByName("id"))
+	req := dto.CreateUpdateCountryRequest{}
+	err := c.ShouldBindJSON(&req)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest, helper.GenerateBaseResponseWithValidatioinError(nil, false, 121, err))
+		return
+	}
+
+	res, err := h.service.Update(c, id, &req)
+	if err != nil {
+		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err), helper.GenerateBaseResponseWithError(nil, false, 121, err))
+		return
+	}
+	c.JSON(http.StatusOK, helper.GenerateBaseResponse(res, true, 0))
+}
+
+// DeleteCountry godoc
+// @Summary Delete a country
+// @Description Delete a country
+// @Tags Countries
+// @Accept  json
+// @Produce  json
+// @Param id path int true "Id"
+// @Success 200 {object} helper.BaseHttpResponse "response"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad request"
+// @Router /v1/countries/{id} [delete]
+// @Security AuthBearer
+func (h *CountryHandler) Delete(c *gin.Context) {
+	id, _ := strconv.Atoi(c.Params.ByName("id"))
+	if id == 0 {
+		c.AbortWithStatusJSON(http.StatusNotFound, helper.GenerateBaseResponse(nil, false, 121))
+		return
+	}
+
+	err := h.service.Delete(c, id)
+	if err != nil {
+		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err), helper.GenerateBaseResponseWithError(nil, false, 121, err))
+		return
+	}
+	c.JSON(http.StatusCreated, helper.GenerateBaseResponse(nil, true, 0))
+}
+
+// GetCountry godoc
+// @Summary Get a country
+// @Description Get a country
+// @Tags Countries
+// @Accept  json
+// @Produce  json
+// @Param id path int true "Id"
+// @Success 200 {object} helper.BaseHttpResponse{result=dto.CountryResponse} "Country response"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad request"
+// @Router /v1/countries/{id} [get]
+// @Security AuthBearer
+func (h *CountryHandler) GetById(c *gin.Context) {
+	id, _ := strconv.Atoi(c.Params.ByName("id"))
+	if id == 0 {
+		c.AbortWithStatusJSON(http.StatusNotFound, helper.GenerateBaseResponse(nil, false, 121))
+		return
+	}
+
+	res, err := h.service.GetById(c, id)
+	if err != nil {
+		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err), helper.GenerateBaseResponseWithError(nil, false, 121, err))
+		return
+	}
+	c.JSON(http.StatusCreated, helper.GenerateBaseResponse(res, true, 0))
+}
+
+// Get by filter
+func (h *CountryHandler) GetByFilter(c *gin.Context) {}
