# src/docs/swagger.yaml
@@ -1,4 +1,46 @@
 definitions:
+  dto.CityResponse:
+    properties:
+      country:
+        $ref: '#/definitions/dto.CountryResponse'
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
+  dto.CompanyResponse:
+    properties:
+      country:
+        $ref: '#/definitions/dto.CountryResponse'
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
+  dto.CountryResponse:
+    properties:
+      cities:
+        items:
+          $ref: '#/definitions/dto.CityResponse'
+        type: array
+      companies:
+        items:
+          $ref: '#/definitions/dto.CompanyResponse'
+        type: array
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
+  dto.CreateUpdateCountryRequest:
+    properties:
+      name:
+        maxLength: 20
+        minLength: 3
+        type: string
+    required:
+    - name
+    type: object
   dto.GetOtpRequest:
     properties:
       mobileNumber:
@@ -81,7 +123,7 @@ definitions:
       error: {}
       result: {}
       resultCode:
-        type: integer
+        $ref: '#/definitions/helper.ResultCode'
       success:
         type: boolean
       validationErrors:
@@ -89,6 +131,28 @@ definitions:
           $ref: '#/definitions/validations.ValidationError'
         type: array
     type: object
+  helper.ResultCode:
+    enum:
+    - 0
+    - 40001
+    - 40101
+    - 40301
+    - 40401
+    - 42901
+    - 42902
+    - 50001
+    - 50002
+    type: integer
+    x-enum-varnames:
+    - Success
+    - ValidationError
+    - AuthError
+    - ForbiddenError
+    - NotFoundError
+    - LimiterError
+    - OtpLimiterError
+    - CustomRecovery
+    - InternalError
   validations.ValidationError:
     properties:
       message:
@@ -131,6 +195,134 @@ paths:
       summary: BodyBinder
       tags:
       - BodyBinder
+  /v1/countries/:
+    post:
+      consumes:
+      - application/json
+      description: Create a country
+      parameters:
+      - description: Create a country
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateUpdateCountryRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Country response" "Success
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/dto.CountryResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Create a country
+      tags:
+      - Countries
+  /v1/countries/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a country
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: response
+          schema:
+            $ref: '#/definitions/helper.BaseHttpResponse'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Delete a country
+      tags:
+      - Countries
+    get:
+      consumes:
+      - application/json
+      description: Get a country
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Country response
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/dto.CountryResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Get a country
+      tags:
+      - Countries
+    put:
+      consumes:
+      - application/json
+      description: Update a country
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Update a country
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateUpdateCountryRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Country response" "Success
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/dto.CountryResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Update a country
+      tags:
+      - Countries
   /v1/health/:
     get:
       consumes:
